version "1.0.0" 调整异常处理和错误代码